0033791: Shape Healing - ShapeCustom not take location of source shape for the cached context and misses root one

Pass ShapeBuild_ReShape to recursive call to retrieve complete change history.
Update history of changes by the source shape (if changed), not only by its subshapes.
Check the context for a cached shape using a reference shape without location.